header html and css add

--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
                 <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
-    </div>
 
+        <header id="home">
+            <div class="home__text">
+                <p>Cześć! Jestem</p>
+                <h1>Kamil Kalbarczyk</h1>
+                <h2>Front-end Developer</h2>
+            </div>
+            <div class="home__image">
+                <img src="./img/personal1.jpg" alt="photo">
+            </div>
+            <button>Kontakt</button>
+        </header>
+    </div>
     <script src="./code.js"></script>
 </body>
 
