add background to desktop menu, change background site

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button>Kontakt</button>
         </header>
     </div>
-    <script src="./code.js"></script>
+    <script src="./js/code.js"></script>
 </body>
 
 </html>
