add about me section in html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <i class="fas fa-bars"></i>
             </button>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">O mnie</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#aboutMe">O mnie</a></li>
                 <li><a href="#">Projekty</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
@@ -40,6 +40,23 @@
             </div>
             <button>Kontakt</button>
         </header>
+
+        <section id="aboutMe">
+            <h2>O mnie</h2>
+            <div>
+                <h3>Dlaczego programowanie?</h3>
+                <p>Pisanie kodu sprawia mi przyjemność. Rozwiązywanie problemów oraz widoczny efekt
+                    swojej pracy daje dużo satysfakcji. Wolny czas poświęcam na rozwój w technologiach
+                    front-end.</p>
+            </div>
+            <div>
+                <h3>Jakie wykorzystuję technologie</h3>
+                <div class="aboutMe__technogolies">
+                    <img src="./img/html.svg" alt="">
+                </div>
+            </div>
+
+        </section>
     </div>
     <script src="./js/code.js"></script>
 </body>
