add technologies img and css styles to min-width: 533px

--- a/index.html
+++ b/index.html
@@ -42,17 +42,33 @@
         </header>
 
         <section id="aboutMe">
-            <h2>O mnie</h2>
-            <div>
+            <div class="aboutMe__section">
+                <h3>Kilka zdań o mnie</h3>
+                <p>Jestem człowiekiem otwartym i bardzo cenne są dla mnie relacje z drugim człowiekiem. Poza czystko
+                    społecznymi korzyściami, w pracy zawodowej są one kluczowe do tego, aby mieć wspólne spojrzenie na
+                    realizowany projekt.</p>
+            </div>
+            <div class="aboutMe__section">
                 <h3>Dlaczego programowanie?</h3>
                 <p>Pisanie kodu sprawia mi przyjemność. Rozwiązywanie problemów oraz widoczny efekt
                     swojej pracy daje dużo satysfakcji. Wolny czas poświęcam na rozwój w technologiach
                     front-end.</p>
             </div>
-            <div>
+            <div class="aboutMe__section">
                 <h3>Jakie wykorzystuję technologie</h3>
                 <div class="aboutMe__technogolies">
-                    <img src="./img/html.svg" alt="">
+                    <div class="aboutMe__technogolieContainer html"><img src="./img/html.png" alt="html logo"></div>
+                    <div class="aboutMe__technogolieContainer css"><img src="./img/css.png" alt="css logo"></div>
+                    <div class="aboutMe__technogolieContainer sass"><img src="./img/sass.svg" alt="sass logo"></div>
+                    <div class="aboutMe__technogolieContainer js"><img src="./img/js.svg" alt="javascript logo"></div>
+                    <div class="aboutMe__technogolieContainer react"><img src="./img/React.svg" alt="react logo"></div>
+                    <div class="aboutMe__technogolieContainer ts"><img src="./img/Typescript.svg" alt="typescript logo">
+                    </div>
+                    <div class="aboutMe__technogolieContainer firebase"><img src="./img/Firebase.png"
+                            alt="firebase logo"></div>
+                    <div class="aboutMe__technogolieContainer sql"><img src="./img/microsoft-sql-server.png"
+                            alt="microsoft sql server logo"></div>
+                    <div class="aboutMe__technogolieContainer git"><img src="./img/git.png" alt="git logo"></div>
                 </div>
             </div>
 
